# pw-block-gen

./: LICENSE  PasswordBlockGenerator.cabal  README.md
src/: Main.hs
