name:                PasswordBlockGenerator
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/herbertjones/PasswordBlockGenerator#readme
license:             BSD3
license-file:        LICENSE
author:              Herbert Jones
maintainer:          jones.herbert@gmail.omc
copyright:           BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable pw-block-gen
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2 && < 1.3
                     , random >= 1.1 && < 1.2
                     , transformers >= 0.4 && < 0.5
